--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dependencies:
   crypto: ^3.0.3
   collection: ^1.18.0
   equatable: ^2.0.5
-  path: ^1.9.1
+  path: 1.8.3
 
   # Charts & Analytics
   fl_chart: ^1.0.0
